--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: En Defensa del Software Libre
+title: Nightscout publications
 ---
 
 <header>
-  <h1>En Defensa del Software Libre</h1>
+  <h1>{{site.title}}</h1>
 
   <blockquote><p>Los servidores ganaron libertad. Los clientes no ganaron
   nada.  Bienvenidos a la nube. <span class="citation">Eben
@@ -14,7 +14,7 @@ title: En Defensa del Software Libre
 
 <section id="articulos">
 
-  <h2>Artículos publicados</h2>
+  <h2>Published articles</h2>
 
 {% for post in site.posts %}
   <dl>
@@ -25,35 +25,31 @@ title: En Defensa del Software Libre
     {% capture extension %}{{ format | first }}{% endcapture %}
     <dd><p><a href="{{ extension }}{{ post.url | remove:'.html' }}.{{ extension }}">{{ extension }}</a></p></dd>
     {% endfor %}
-    <dd><p><a href="{{ post.url }}#formats">otros...</a></p></dd>
+    <dd><p><a href="{{ post.url }}#formats">all...</a></p></dd>
 
   </dl>
 {% endfor %}
 
 </section>
 
-<section id="contacto">
+<section id="contact">
 
-  <h2>Contacto</h2>
+  <h2>Contact</h2>
 
   <ul>
-
-    <li>Lista de discusión: <a
-    href="http://listas.hipatia.net/cgi-bin/mailman/listinfo/endefensadelsl">endefensadelsl@listas.hipatia.net</a></li>
-
-    <li>IRC: <a href="irc://freenode.net/#endefensadelsl">#endefensadelsl</a> en freenode</li>
-
-    <li><a href="ventas.html">Puntos de distribución</a></li>
+    {% for post in site.data.contact %}
+    <li>
+    </li>
+    {% endfor %}
 
   </ul>
 </section>
 
 <footer>
-  <a href="licencia.html">Licencia</a> |
-  <a href="atom.xml">Feed Completo</a> |
-  <a href="atom_epub.xml">Feed EPUB</a> |
-  <a href="atom_torrent.xml">Feed Torrent</a> |
+  <a href="licencia.html">License</a> |
+  <a href="atom.xml">ATOM Feed</a> |
+  <a href="atom_epub.xml">EPUB Feed</a> |
+  <a href="atom_torrent.xml">Torrent Feed</a> |
   <a href="{{ site.torrent.file }}">Torrent</a> |
-  <a href="git/">Código fuente</a> |
   <a href="http://johnmacfarlane.net/pandoc/">jekyll</a>+<a href="http://jekyllrb.com">pandoc</a>
 </footer>
